--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title></title> 
+    <title></title>
 </head>
 <body>
     <script type="text/javascript" src="hello_JS.js"></script>
-    
 </body>
 </html>
